--- a/index.html
+++ b/index.html
@@ -1,129 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Verification</title>
-<style>
-  * { box-sizing: border-box; margin: 0; padding: 0; }
+  <meta charset="UTF-8">
+  <title>Granite Gaming Live Official</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  body {
-    font-family: Arial, sans-serif;
-    background: #f5f7fb;
-    color: #222;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    min-height: 100vh;
-    padding-top: 60px;
-  }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
+    }
 
-  h1 {
-    font-size: 20px;
-    margin-bottom: 30px;
-    color: #333;
-    text-align: center;
-  }
+    body {
+      background: #0d0d0d;
+      color: white;
+      text-align: center;
+    }
 
-  .timer-circle {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    border: 3px solid #c7d6f7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-    background: #e7efff;
-  }
+    header {
+      padding: 60px 20px;
+      background: linear-gradient(120deg, #7b2ff7, #f107a3);
+    }
 
-  .timer-inner {
-    text-align: center;
-  }
+    header h1 {
+      font-size: 48px;
+      font-weight: 700;
+    }
 
-  .timer-number {
-    font-size: 28px;
-    font-weight: 700;
-    color: #1a73e8;
-    line-height: 1;
-  }
+    header p {
+      margin-top: 10px;
+      font-size: 18px;
+      opacity: 0.9;
+    }
 
-  .timer-label {
-    font-size: 12px;
-    color: #777;
-    margin-top: 3px;
-  }
+    .btn-subscribe {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 15px 30px;
+      background: #ff0000;
+      font-size: 20px;
+      border-radius: 8px;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
 
-  .btn {
-    padding: 12px 40px;
-    border-radius: 24px;
-    border: none;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: not-allowed;
-    background: #82aef5;
-    color: #fff;
-    outline: none;
-    transition: all 0.2s ease;
-  }
+    .btn-subscribe:hover {
+      background: #cc0000;
+    }
 
-  .btn.active {
-    cursor: pointer;
-    background: #1a73e8;
-    box-shadow: 0 0 18px rgba(26, 115, 232, 0.55);
-  }
-</style>
+    .section {
+      padding: 50px 20px;
+    }
+
+    iframe {
+      width: 90%;
+      height: 500px;
+      border: none;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      background: #111;
+      font-size: 14px;
+      opacity: 0.7;
+    }
+  </style>
 </head>
+
 <body>
 
-<h1 id="title">Please wait...</h1>
+  <header>
+    <h1>Granite Gaming Live Official</h1>
+    <p>Live streams • Gaming • BGMI • Tutorials • Emulator Configs</p>
 
-<div class="timer-circle">
-  <div class="timer-inner">
-    <div id="secondsValue" class="timer-number">8</div>
-    <div class="timer-label">Seconds</div>
+    <a class="btn-subscribe" 
+       href="https://www.youtube.com/@granitegamingliveofficial" target="_blank">
+      🔴 SUBSCRIBE NOW
+    </a>
+  </header>
+
+  <div class="section">
+    <h2>🎮 Latest Videos</h2>
+
+    <!-- Embedded YT -->
+    <iframe src="https://www.youtube.com/embed?list=UULF6hx173NkZ5Ehy1ftJ6Y-ow" allowfullscreen></iframe>
   </div>
-</div>
 
-<button id="actionButton" class="btn" disabled>
-  Please wait...
-</button>
+  <div class="section" style="background:#111;">
+    <h2>📌 About Granite Gaming</h2>
+    <p style="max-width:800px; margin:20px auto; font-size:18px;">
+      Welcome to Granite Gaming! I stream BGMI, emulator tips, tutorials, and gameplay content daily.
+      Join the community and support the channel by subscribing!
+    </p>
+  </div>
 
-<script>
-  let timeLeft = 8;
-
-  const secondsValue = document.getElementById("secondsValue");
-  const actionButton = document.getElementById("actionButton");
-  const title = document.getElementById("title");
-
-  const interval = setInterval(() => {
-    timeLeft--;
-    if (timeLeft < 0) timeLeft = 0;
-
-    secondsValue.textContent = timeLeft;
-
-    if (timeLeft <= 0) {
-      clearInterval(interval);
-      title.textContent = "Your link is almost ready.";
-      actionButton.textContent = "Get Link";
-      actionButton.disabled = false;
-      actionButton.classList.add("active");
-      actionButton.style.cursor = "pointer";
-    }
-  }, 1000);
-
-  actionButton.addEventListener("click", () => {
-    if (actionButton.disabled) return;
-
-    // Send signal to C# app (NO POPUP here)
-    try {
-      if (window.chrome && window.chrome.webview) {
-        window.chrome.webview.postMessage("verified");
-      }
-    } catch (e) {}
-  });
-</script>
+  <footer>
+    © 2025 Granite Gaming — All Rights Reserved
+  </footer>
 
 </body>
 </html>
